--- a/playbook.yml
+++ b/playbook.yml
@@ -5,6 +5,8 @@
         name: python3-pip
         update_cache: yes
         cache_valid_time: 604800 # 1 week
+      tags:
+        - setup
 
     - name: Ignore PEP 668 because it's silly.
       ansible.builtin.file:
@@ -13,3 +15,14 @@
 
     - pip:
         name: docker
+      tags:
+        - setup
+
+    - name: start redmine container
+      community.docker.docker_container:
+        name: redmine
+        image: redmine
+        published_ports: 3000:3000
+      become: yes
+      tags:
+        - redmine
