--- a/playbook.yml
+++ b/playbook.yml
@@ -23,6 +23,12 @@
         name: redmine
         image: redmine
         published_ports: 3000:3000
+        env:
+          REDMINE_DB_POSTGRES: "{{ REDMINE_DB_POSTGRES }}"
+          REDMINE_DB_PORT: "{{ REDMINE_DB_PORT }}"
+          REDMINE_DB_USERNAME: "{{ REDMINE_DB_USERNAME }}"
+          REDMINE_DB_DATABASE: "{{ REDMINE_DB_DATABASE }}"
+          REDMINE_DB_PASSWORD: "{{ REDMINE_DB_PASSWORD }}"
       become: yes
       tags:
         - redmine
