--- a/group_vars/webservers/vars.yml
+++ b/group_vars/webservers/vars.yml
@@ -1,5 +1,7 @@
-REDMINE_DB_POSTGRES: hexlet-postgres-01-do-user-15554316-0.c.db.ondigitalocean.com
-REDMINE_DB_PORT: "25060"
-REDMINE_DB_USERNAME: doadmin
-REDMINE_DB_DATABASE: defaultdb
-REDMINE_DB_PASSWORD: "{{ vault_REDMINE_DB_PASSWORD }}"
+datadog_api_key: "{{ vault_datadog_api_key }}"
+datadog_site: ap1.datadoghq.com
+datadog_checks:
+  http_check:
+    instances:
+      - name: redmine instance
+        url: http://localhost:3000
