--- a/inventory.ini
+++ b/inventory.ini
@@ -1,3 +1,3 @@
 [webservers]
-167.99.69.222 server_name=hexlet1
-206.189.47.97 server_name=hexlet2
+hexlet1 ansible_host=167.99.69.222
+hexlet2 ansible_host=206.189.47.97
