--- a/playbook.yml
+++ b/playbook.yml
@@ -23,10 +23,10 @@
         published_ports: 3000:3000
         env:
           REDMINE_DB_POSTGRES: "{{ redmine_db_postgres }}"
-          REDMINE_DB_PORT: "{{ redmina_db_port }}"
-          REDMINE_DB_USERNAME: "{{ redmina_db_username }}"
-          REDMINE_DB_DATABASE: "{{ redmina_db_database }}"
-          REDMINE_DB_PASSWORD: "{{ redmina_db_password }}"
+          REDMINE_DB_PORT: "{{ redmine_db_port }}"
+          REDMINE_DB_USERNAME: "{{ redmine_db_username }}"
+          REDMINE_DB_DATABASE: "{{ redmine_db_database }}"
+          REDMINE_DB_PASSWORD: "{{ redmine_db_password }}"
       become: yes
 
 - hosts: webservers
